--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -2,108 +2,102 @@
 @model IEnumerable<Vehicle>
 
 <div class="container">
-    <div>
-        <div>
-            <form asp-controller="Vehicle" asp-action="Index" method="post">
-                <div class="row">
-                    <div class="col">
-                        @*<div class="form-group">
-                                <label asp-for="Year">Årstyp</label>
-                                <select asp-for="Year" class="form-control">
-                                    <option disabled selected>Välj</option>
-                                    <option value="modern-00">Modern-2000</option>
-                                    <option value="00-90">2000-1990</option>
-                                    <option value="90-80">1990-1980</option>
-                                    <option value="80-60">1980-1960</option>
-                                    <option value="60-old">1960-Older</option>
-                                </select>
-                            </div>*@
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="fuel">Bränsle</label>
-                            <select name="fuel" class="form-control">
-                                <option disabled selected>Välj</option>
-                                <option value="Bensin">Bensin</option>
-                                <option value="Diesel">Diesel</option>
-                                <option value="El">El</option>
-                                <option value="Miljöbränsle/Hybrid">Miljöbränsle/Hybrid</option>
-                            </select>
-                        </div>
+    <form asp-controller="Vehicle" asp-action="Index" method="post">
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label for="year">Årstyp</label>
+                    <select name="year" class="form-control">
+                        <option disabled selected>Välj</option>
+                        <option value="modern-00">Modern-2000</option>
+                        <option value="99-80">1999-1980</option>
+                        <option value="79-60">1979-1960</option>
+                        <option value="59-old">1959-Older</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="fuel">Bränsle</label>
+                    <select name="fuel" class="form-control">
+                        <option disabled selected>Välj</option>
+                        <option value="Bensin">Bensin</option>
+                        <option value="Diesel">Diesel</option>
+                        <option value="El">El</option>
+                        <option value="Miljöbränsle/Hybrid">Miljöbränsle/Hybrid</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label for="body">Karosstyp</label>
+                    <select name="body" class="form-control">
+                        <option disabled selected>Välj</option>
+                        <option value="Småbil">Småbil</option>
+                        <option value="Sedan">Sedan</option>
+                        <option value="Halvbil">Halvbil</option>
+                        <option value="Kombi">Kombi</option>
+                        <option value="SUV">SUV</option>
+                        <option value="Coupé">Coupé</option>
+                        <option value="Cab">Cab</option>
+                        <option value="Familjebuss">Familjebuss</option>
+                        <option value="Yrkesfordon">Yrkesfordon</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="gearbox">Växellåda</label>
+                    <select name="gearbox" class="form-control">
+                        <option disabled selected>Välj</option>
+                        <option value="Manuell">Manuell</option>
+                        <option value="Automat">Automat</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        @*<div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label>Pris</label>
+                        <input class="form-control" type="range" />
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="body">Karosstyp</label>
-                            <select name="body" class="form-control">
-                                <option disabled selected>Välj</option>
-                                <option value="Småbil">Småbil</option>
-                                <option value="Sedan">Sedan</option>
-                                <option value="Halvbil">Halvbil</option>
-                                <option value="Kombi">Kombi</option>
-                                <option value="SUV">SUV</option>
-                                <option value="Coupé">Coupé</option>
-                                <option value="Cab">Cab</option>
-                                <option value="Familjebuss">Familjebuss</option>
-                                <option value="Yrkesfordon">Yrkesfordon</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="gearbox">Växellåda</label>
-                            <select name="gearbox" class="form-control">
-                                <option disabled selected>Välj</option>
-                                <option value="Manuell">Manuell</option>
-                                <option value="Automat">Automat</option>
-                            </select>
-                        </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label>Mil</label>
+                        <input class="form-control" type="range" />
                     </div>
                 </div>
+            </div>*@
 
-                @*<div class="row">
-                        <div class="col">
-                            <div class="form-group">
-                                <label>Pris</label>
-                                <input class="form-control" type="range" />
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <label>Mil</label>
-                                <input class="form-control" type="range" />
-                            </div>
-                        </div>
-                    </div>*@
-
-                <div class="row" style="margin-left:55%;">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col">
+                <div style="float:right;">
                     <div class="form-group">
                         <button class="btn btn-sm btn-primary" type="submit" id="filterSubmitBtn">Filter</button>&nbsp;
-                    </div>
-                    <div class="form-group">
                         <button type="reset" class="btn btn-sm btn-secondary">Clear</button>
-
                     </div>
-
-
                 </div>
-            </form>
-            @*<br />
-                <br />*@
-            <div>
-                <a asp-controller="Vehicle" asp-action="Index" class="btn btn-sm" id="seeAllVehiclesBtn" style="float:right;">See all vehicles</a>
             </div>
-
-
         </div>
+    </form>
+
+    <div>
+        <a asp-controller="Vehicle" asp-action="Index" class="btn btn-sm" id="seeAllVehiclesBtn" style="float:right;">See all vehicles</a>
     </div>
+
     <br />
     <br />
     <hr />
     <br />
 
+    @* Div that shows all filtered vehicle results. *@
     <div>
         @foreach (var v in Model)
         {
@@ -138,8 +132,8 @@
             <br />
             <br />
         }
-
     </div>
+
     @*<div page-model="@Model.Pager" page-action="VehicleList">
 
         </div>*@
@@ -151,9 +145,9 @@
 
 <script src="~/js/site.min.js"></script>
 <script>
-        //$(document).ready(function () {
-        //    $('#filterSubmitBtn').on('click', function () {
-        //        $('#seeAllVehiclesBtn').show();
-        //    });
-        //});
+                //$(document).ready(function () {
+                //    $('#filterSubmitBtn').on('click', function () {
+                //        $('#seeAllVehiclesBtn').show();
+                //    });
+                //});
 </script>
