Send the mail of current car workds

--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -66,6 +66,7 @@
                 </div>
             </form>
         </div>
+        @*Article Api*@
         <div class="col-lg-4">
             @{
 
