Filter works for kilometer now.

--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -79,7 +79,6 @@
                     <label for="maxPrice">Max pris</label>
                     <select name="maxPrice" class="form-control">
                         <option disabled selected>Välj</option>
-                        <option value="0">0</option>
                         <option value="10000">10 000</option>
                         <option value="20000">20 000</option>
                         <option value="30000">30 000</option>
@@ -90,22 +89,19 @@
             </div>
             <div class="col">
                 <div class="form-group">
-
-                </div>
-            </div>
-            <div class="col">
-                <div class="form-group">
-
+                    <label for="maxKm">Max kilometer</label>
+                    <select name="maxKm" class="form-control">
+                        <option disabled selected>Välj</option>
+                        <option value="5000">5 000</option>
+                        <option value="10000">10 000</option>
+                        <option value="20000">20 000</option>
+                        <option value="30000">30 000</option>
+                        <option value="40000">40 000</option>
+                        <option value="50000">50 000</option>
+                    </select>
                 </div>
             </div>
         </div>
-
-
-
-        @*<label>Mil</label>
-        <input class="form-control" type="range" />*@
-
-
 
         <div class="row">
             <div class="col"></div>
