--- a/BolindersBil.Web/Views/Shared/_VehicleForSaleLayout.cshtml
+++ b/BolindersBil.Web/Views/Shared/_VehicleForSaleLayout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/css/style.css" rel="stylesheet" />
+    <link href="~/css/vehicleAdStyle.css" rel="stylesheet" />
 </head>
 <body>
 
