Minor fixes on the startpage.

--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -43,18 +43,27 @@
 
             <br />
 
-            <div class="text-center">
-                <img src="~/Logo/images.jpg" alt="Responsive image" class="col-xl-4" />
-                <div>
-                    <h5> Historian om BolindersBil</h5>
-                    <h6>
-                        Bilidersbil började på 1934 i sin morfars garage. Bolinder som pojken hette älskade Star Wars fast hans far sa att det är bara
-                        på hitt och att han skulle skaffa sig ett jobb. Jävla snorunge brukade han säga. Bolinder började mecka med stenar men upptäckte att det inte
-                        gick så bra att skruva på stenar. Vilken IDIOT!!!!!!
-                    </h6>
+            <!-- Ads on the startpage with images from folder adsimages: -->
+            <div class="col-lg-12">
+                <div id="startPageCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" style="width:100%">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" style="border-radius:20px;" src="~/adsimages/vinterdack_carousel.jpg" alt="~/defaultimages/Image_Upload.png">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" style="border-radius:20px;" src="~/adsimages/falgar_carousel.jpg" alt="~/defaultimages/Image_Upload.png">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#startPageCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Föregående</span>
+                    </a>
+                    <a class="carousel-control-next" href="#startPageCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Nästa</span>
+                    </a>
                 </div>
             </div>
-
 
         </div>
         <div class="col-lg-4">
