--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -2,6 +2,8 @@
 
 <p>This is the Vehicle Index page!</p>
 
+
+
 <div class="container">
 
     <div class="row">
@@ -54,6 +56,38 @@
 
             </form>
         </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+
+                    <h1 class="page-header">Loan Calculator</h1>
+
+                    <div>
+
+                        <div class="form-group">
+                            <label for="loan-amount">Amount: </label> 
+                            <input type="range" id="loan-amount" min="1000" max="100000" step="1000" value="2000">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="loan-duration">Months:</label> 
+                            <input type="range" id="loan-duration" min="6" max="72" step="1" value="12">
+                        </div>    
+
+                                      
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
+
     </div>
     <div class="row">
         @foreach (var v in Model.Vehicles)
