--- a/BolindersBil.Web/Views/Shared/_Layout.cshtml
+++ b/BolindersBil.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link href="~/css/style.min.css" rel="stylesheet" />
+    <link href="~/css/style.css" rel="stylesheet" />
 </head>
 <body>
 
