--- a/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
@@ -109,17 +109,20 @@
                 <form asp-action="SendMail" asp-controller="Mail" method="get">
                     <div class="form-group">
                         <div class="input-group">
-                            @*Values for the mail*@
-                            <input asp-for="Link" type="hidden" id="UrlAdvert" value='@($"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.Path}{Context.Request.QueryString}")' />
-                            <input asp-for="vehicleId" type="hidden" value="@Model.Vehicle.Id" />
-                            <input asp-for="Brand" type="hidden" value="@Model.Vehicle.Brand" />
-                            <input asp-for="Model" type="hidden" value="@Model.Vehicle.Model" />
-                            <input asp-for="ModelDescription" type="hidden" value="@Model.Vehicle.ModelDescription" />
-                            <input asp-for="Year" type="hidden" value="@Model.Vehicle.Year" />
-                            <input asp-for="CurrentOffice" type="hidden" value="@Model.Vehicle.Office" />
-                            @*Send the mail*@
-                            <input asp-for="Email" class="form-control rounded" placeholder="Skicka vidare" pattern="[a-zA-Z0-9!#$%&'*+\/=?^_`{|}~.-]+@@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*" required />
-                            <input class="btn btn-success" type="submit" value="Dela" />
+                            <label for="kalkylSelectName"></label>
+                            <select id="kalkylSelect" class="form-control col-3" name="kalkylSelectName">
+                                <option value="12">12</option>
+                                <option value="24">24</option>
+                                <option value="36" selected>36</option>
+                                <option value="48">48</option>
+                                <option value="60">60</option>
+                                <option value="72">72</option>
+                            </select>
+                            <a id="getKalkyl" class="btn btn-success form-control col-4">hämta pris i månaden</a>
+
+                            <div id="kalkyl" class="col-3">
+
+                            </div>
                         </div>
                     </div>
                 </form>
@@ -149,14 +152,32 @@
 <script>
         $(document).ready(function () {
             $("#delPrice").hide();
-            $("#newPrice").hide();
-            $("#taxFree").click(function () {
-
-
-
-                $("#vehiclePrice").toggle();
-                $("#delPrice").toggle();
-                $("#newPrice").toggle();
-            });
+        $("#newPrice").hide();
+        $("#taxFree").click(function () {
+            $("#vehiclePrice").toggle();
+            $("#delPrice").toggle();
+            $("#newPrice").toggle();
         });
-    </script>
+
+        $("#getKalkyl").click(function () {
+
+            let x = @Model.Vehicle.Price;
+
+            let y = $('#kalkylSelect').find('option:selected').val();
+
+            let z = x * 0.8;
+            
+            let b = z / y;
+
+            let a = b * 1.045
+
+            let c = a.toFixed(2);
+
+            console.log(y);
+
+            $("#kalkyl").empty();
+
+            $("#kalkyl").append(c);
+        });
+        });
+</script>
