--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -118,7 +118,16 @@
         </div>
     </form>
 
+    <div style="float:right;">
+        <div class="form-group">
+            <a asp-controller="Vehicle" asp-action="Used" class="btn btn-sm" id="seeAllVehiclesBtn">Used vehicles</a> |
+            <a asp-controller="Vehicle" asp-action="New" class="btn btn-sm" id="seeAllVehiclesBtn">New vehicles</a> |
+            <a asp-controller="Vehicle" asp-action="Index" class="btn btn-sm" id="seeAllVehiclesBtn">All vehicles</a>
+        </div>
     </div>
+
+
+</div>
 
     <br />
     <br />
@@ -149,7 +158,7 @@
                     <h3>@v.Brand @v.Model @v.ModelDescription @v.Year</h3>
                     <span>@v.Fuel | @v.Gearbox | @v.Kilometer</span>
                     <h4>@v.Price Kr</h4>
-                    <a asp-action="Vehicle" class="btn btn-sm btn-success" asp-route-vehicleId="@v.Id">
+                    <a asp-action="Vehicle" class="btn btn-sm btn-success" asp-route-brand="@v.Brand" asp-route-model="@v.Model" asp-route-modeldescription="@v.ModelDescription" asp-route-vehicleId="@v.Id">
                         Mer information...
                     </a>
                 </div>
