Added correct url structure and images from DB.

--- a/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
+++ b/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
@@ -10,7 +10,8 @@
                 <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
             <li>
-                <a class="nav-link" href="/Vehicle">Vehicles</a>
+                @*<a class="nav-link" href="/Vehicle">Vehicles</a>*@
+                <a class="nav-link" asp-controller="Vehicle" asp-action="Index">Vehicles</a>
             </li>
             <li>
                 <a class="nav-link" href="/Contact">Contact</a>
