--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -136,12 +136,11 @@
             <div class="row">
                 <input type="hidden" value="@v.Id" />
                 <div class="col-5">
-                    @if (v.Images != null)
+                    @if (v.Images.Count() != 0)
                     {
-                        foreach (var i in v.Images)
-                        {
-                            @*<img src="@i.Path" />*@
-                        }
+                        var vehicleImage = v.Images.FirstOrDefault();
+                        var imagePath = vehicleImage.Path;
+                        <img src="@imagePath" alt="@v.Brand : @v.Model" class="img-thumbnail" /> 
                     }
                     else
                     {
@@ -153,7 +152,7 @@
                     <h3>@v.Brand @v.Model @v.ModelDescription @v.Year</h3>
                     <span>@v.Fuel | @v.Gearbox | @v.Kilometer</span>
                     <h4>@v.Price Kr</h4>
-                    <a asp-action="Vehicle" class="btn btn-sm btn-success" asp-route-vehicleId="@v.Id">
+                    <a asp-action="Vehicle" class="btn btn-sm btn-success" asp-route-brand="@v.Brand" asp-route-model="@v.Model" asp-route-modeldescription="@v.ModelDescription" asp-route-vehicleId="@v.Id">
                         Mer information...
                     </a>
                 </div>
@@ -168,33 +167,3 @@
     </div>
 
 </div>
-
-@*<script src="~/js/site.min.js"></script>
-<script>
-    $(document).ready(function () {
-
-        $('#usedBtn').on('click', function () {
-
-            $.ajax({
-                url: '/Vehicle/Index',
-                dataType: 'json',
-                method: 'GET',
-                contentType: 'application/json; charset=utf-8',
-                cache: false,
-                data: { test: comments },
-                success: function (data) {
-                    // data is your result from controller
-                    if (data.success) {
-                        alert(data.message);
-                    }
-                },
-                error: function (error) {
-                    alert('error');
-                }
-            });
-
-        });
-
-    });
-</script>*@
-
