--- a/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
@@ -5,13 +5,16 @@
 <div class="container" style="margin-top:50px">
     <div class="row">
         <!-- Carousel: -->
-        <div class="col-sm-12" style="margin-bottom:20px">
+        <div class="col-sm-12">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <!-- Foreach that loops through all the images concerning the specific vehicleId: -->
                 <div class="carousel-inner" style="width:100%">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="~/images/vehicle_images/Test_ABC123/1956d4bc-02be-4829-ab3e-22220c4f72f7_ABC123_test.jpg" alt="IMG_NOT_FOUND">
-                    </div>
+                    @foreach (var img in Model.Vehicle.Images)
+                    {
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="@img.Path" alt="~/defaultimages/Image_Upload.png" data-toggle="modal" data-target="#vehicleModal">
+                        </div>
+                    }
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -21,6 +24,15 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Nästa</span>
                 </a>
+            </div>
+        </div>
+        <div class="col-sm-12 thumbs" style="background-color:white; margin-bottom:20px; padding:10px;">
+            <!-- TODO: Link img to Modal: -->
+            <div class="col-sm-12" style="margin:0 auto;">
+                @foreach (var img in Model.Vehicle.Images)
+                {
+                    <img class="img-thumbnailSpecialOne justify-content-xl-center" src="@img.Path" />
+                }
             </div>
         </div>
         <!-- Bilmärke: -->
@@ -72,25 +84,20 @@
                         <option value="72">72</option>
                     </select>
                     <a id="getKalkyl" class="btn btn-success form-control col-4">hämta pris i månaden</a>
-
                     <div id="kalkyl" class="col-3">
-
                     </div>
                 </div>
             </form>
         </div>
         <div class="col-sm-12" style="background-color:lightblue; margin-bottom:20px; padding:10px;">
             <h3>RELATERADE FORDON:</h3>
-
             @foreach (var v in Model.ListOfVehicles.Take(4))
             {
                 <a asp-action="Vehicle" class="btn btn-sm btn-success" asp-route-vehicleId="@v.Id">
                     @v.Brand @v.Model | @v.Price kr
                 </a>
             }
-
         </div>
-        
         <div class="col-sm-12" style="background-color:white; margin-bottom:20px; padding:10px;">
             <!-- Back to the page that lists all the vehicles: -->
             <form asp-action="Index" asp-controller="Vehicle">
@@ -110,7 +117,6 @@
                             <input asp-for="ModelDescription" type="hidden" value="@Model.Vehicle.ModelDescription" />
                             <input asp-for="Year" type="hidden" value="@Model.Vehicle.Year" />
                             <input asp-for="CurrentOffice" type="hidden" value="@Model.Vehicle.Office" />
-
                             @*Send the mail*@
                             <input asp-for="Email" class="form-control rounded" placeholder="Skicka vidare" pattern="[a-zA-Z0-9!#$%&'*+\/=?^_`{|}~.-]+@@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*" required />
                             <input class="btn btn-success" type="submit" value="Dela" />
@@ -121,48 +127,52 @@
         </div>
     </div>
 </div>
+<!-- CrarouselModal: -->
+<div class="modal fade" id="vehicleModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body align-self-center">
+                <div id="modalCarousel" class="carousel">
+                    <img src="" class="img-thumbnail" />
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-danger" type="button" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="~/js/site.min.js"></script>
 <script>
-    $(document).ready(function () {
-        $("#delPrice").hide();
+        $(document).ready(function () {
+            $("#delPrice").hide();
         $("#newPrice").hide();
         $("#taxFree").click(function () {
-
-
-
             $("#vehiclePrice").toggle();
             $("#delPrice").toggle();
             $("#newPrice").toggle();
         });
-        
-        //let currentValue = $('#kalkylValue').value();
-        //let retval = currentValue.value;
-
-        let x = @Model.Vehicle.Price;
-
-        //let e = document.getElementById("kalkylSelect");
-
-        //let eOption = e.options[e.selectedIndex].value
-
-        let eOption = $("#kalkylSelect").val();
-
-        let y = eOption
-
-        let z = x * 0.8;
-            
-        let b = z / y;
-
-        let a = b * 1.045
-
-        //$("#kalkyl").append(a);
 
         $("#getKalkyl").click(function () {
-            console.log(a);
+
+            let x = @Model.Vehicle.Price;
+
+            let y = $('#kalkylSelect').find('option:selected').val();
+
+            let z = x * 0.8;
+
+            let b = z / y;
+
+            let a = b * 1.045
+
+            let c = a.toFixed(2);
+
+            console.log(y);
 
             $("#kalkyl").empty();
 
-            $("#kalkyl").append(a);
+            $("#kalkyl").append(c);
         });
-        
-    });
+        });
 </script>
