--- a/BolindersBil.Web/Views/Shared/_Layout.cshtml
+++ b/BolindersBil.Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,6 @@
     </div>
 
     <script src="~/js/site.min.js"></script>
-    <script src="~/js/VehicleIndex.js"></script>
+    <script src="~/js/customBundle.min.js"></script>
 </body>
 </html>
