--- a/BolindersBil.Web/Views/Shared/_VehicleForSaleLayout.cshtml
+++ b/BolindersBil.Web/Views/Shared/_VehicleForSaleLayout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/css/style.css" rel="stylesheet" />
-    <link href="~/css/vehicleAdStyle.css" rel="stylesheet" />
+    <link href="~/css/vehicleAdStyle.min.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -15,6 +15,6 @@
         @RenderBody()
     </div>
     <script src="~/js/site.min.js"></script>
-    <script src="~/js/vehicleForSale.js"></script>
+    <script src="~/js/customBundle.min.js"></script>
 </body>
 </html>
