--- a/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
@@ -9,12 +9,34 @@
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <!-- Foreach that loops through all the images concerning the specific vehicleId: -->
                 <div class="carousel-inner" style="width:100%">
-                    @foreach (var img in Model.Vehicle.Images)
+
+                    @if (Model.Vehicle.Images.Count() != 0)
                     {
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="@img.Path" alt="~/defaultimages/Image_Upload.png" data-toggle="modal" data-target="#vehicleModal">
-                        </div>
+
+                        @foreach (var v in Model.Vehicle.Images)
+                        {
+
+                            @if (v != null)
+                            {
+
+                                var imagePath = v.Path;
+                                <div class="carousel-item">
+                                    <img src="@imagePath" @*alt="@v.Brand : @v.Model" *@ class="d-block w-100" data-toggle="modal" data-target="#vehicleModal" />
+                                </div>
+
+                            }
+                            else
+                            {
+                                <img src="~/defaultimages/Image_Upload.png" />
+                            }
+
+                        }
                     }
+                    else
+                    {
+                        <img src="~/defaultimages/Image_Upload.png" />
+                    }
+
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -99,10 +121,7 @@
             }
         </div>
         <div class="col-sm-12" style="background-color:white; margin-bottom:20px; padding:10px;">
-            <!-- Back to the page that lists all the vehicles: -->
-            <form asp-action="Index" asp-controller="Vehicle">
-                <input class="btn btn-warning" type="submit" value="Till alla fordon" />
-            </form>
+
             @*Send vehicle to a friend*@
             <div class="vehicleButtons" style="float:right">
                 <!-- This form and its button allows you to share the vehicle: -->
